feat: Integrated 'Bring Your Own Standards', refined Tech Stack Wizard, and updated to Proprietary License

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "Blueprint: Idea to Build Brief",
   "description": "8 specialized AI agents that transform your app idea into a complete, annotated build brief — brand identity, API contracts, database schema, TDD strategy, UI spec, and a one-shot master prompt. Supports Gemini, OpenAI, Groq, and Azure OpenAI.",
   "version": "0.1.0",
+  "license": "SEE LICENSE IN LICENSE",
   "publisher": "blueprint-dev",
   "repository": {
     "type": "git",
